parser/y.output
Terminals unused in grammar

    LEN
    ALLOCATED
    OPEN
    CLOSE
    INQUIRE
    WRITE
    READ
    ERROR
    CONCAT
    PP_ELIF


Grammar

    0 $accept: start $end

    1 start: compilation_units
    2      | free_form

    3 compilation_units: compilation_unit
    4                  | compilation_units compilation_unit

    5 compilation_unit: program_unit
    6                 | module_unit

    7 free_form: preamble declarations executables

    8 program_unit: PROGRAM IDENTIFIER program_body END PROGRAM IDENTIFIER
    9             | PROGRAM IDENTIFIER program_body END PROGRAM

   10 module_unit: MODULE IDENTIFIER module_body END MODULE IDENTIFIER
   11            | MODULE IDENTIFIER module_body END MODULE

   12 program_body: preamble declarations executables contains_block

   13 module_body: preamble declarations executables contains_block

   14 contains_block: CONTAINS subprogram_list
   15               | %empty

   16 declarations: %empty
   17             | declaration declarations

   18 preamble: %empty
   19         | preamble pp_item

   20 pp_item: pp_define_undef
   21        | pp_if_block

   22 declaration: type_spec declaration_attributes DECL_SEP declarator_list
   23            | IMPLICIT NONE
   24            | USE identifier
   25            | type_def

   26 type_spec: INTEGER
   27          | REAL
   28          | LOGICAL
   29          | char_type_spec
   30          | TYPE LPAREN identifier RPAREN
   31          | CLASS identifier
   32          | COMPLEX

   33 char_type_spec: CHARACTER char_len_opt

   34 char_len_opt: %empty
   35             | LPAREN LENGTH_SPECIFIER ASSIGN char_len_value RPAREN

   36 char_len_value: COLON
   37               | INT_CONST
   38               | identifier

   39 attributes: attribute
   40           | attribute COMMA attributes

   41 attribute: ALLOCATABLE
   42          | POINTER
   43          | TARGET
   44          | INTENT LPAREN IN RPAREN
   45          | INTENT LPAREN OUT RPAREN
   46          | INTENT LPAREN INOUT RPAREN

   47 declaration_attributes: %empty
   48                       | COMMA attributes

   49 identifier_list: identifier
   50                | identifier COMMA identifier_list

   51 declarator_list: declarator
   52                | declarator COMMA declarator_list

   53 declarator: identifier array_spec_opt init_opt

   54 array_spec_opt: %empty
   55               | array_spec

   56 array_spec: LPAREN array_spec_list RPAREN

   57 array_spec_list: array_spec_item
   58                | array_spec_list COMMA array_spec_item

   59 array_spec_item: ASSUMED_RANK_SPECIFIER
   60                | COLON
   61                | expression
   62                | expression COLON
   63                | COLON expression
   64                | expression COLON expression

   65 init_opt: %empty
   66         | ASSIGN expression

   67 executables: %empty
   68            | executables executable

   69 executable: assignment_stmt
   70           | if_stmt
   71           | print_stmt
   72           | allocate_stmt
   73           | deallocate_stmt
   74           | do_stmt
   75           | dowhile_stmt
   76           | select_rank_stmt
   77           | select_stmt
   78           | call_stmt
   79           | return_stmt
   80           | stop_stmt
   81           | pointer_stmt

   82 assignment_stmt: variable_ref ASSIGN expression

   83 if_stmt: IF LPAREN expression RPAREN THEN executables ENDIF
   84        | IF LPAREN expression RPAREN THEN executables END IF
   85        | IF LPAREN expression RPAREN THEN executables ELSE executables ENDIF
   86        | IF LPAREN expression RPAREN THEN executables ELSE executables END IF

   87 do_stmt: DO IDENTIFIER ASSIGN expression COMMA expression step_opt executables END DO

   88 dowhile_stmt: DO WHILE LPAREN expression RPAREN executables END DO

   89 select_stmt: SELECT CASE LPAREN expression RPAREN case_blocks END SELECT

   90 select_rank_stmt: SELECT RANK LPAREN identifier RPAREN rank_blocks END SELECT

   91 rank_blocks: rank_block
   92            | rank_blocks rank_block

   93 rank_block: RANK LPAREN rank_selector RPAREN executables
   94           | RANK DEFAULT executables

   95 rank_selector: INT_CONST
   96              | ARITH_OP

   97 case_blocks: case_block
   98            | case_blocks case_block

   99 case_block: CASE LPAREN expression RPAREN executables
  100           | CASE DEFAULT executables

  101 call_stmt: CALL callable_name LPAREN argument_list RPAREN

  102 callable_name: identifier
  103              | INTRINSIC

  104 return_stmt: RETURN

  105 stop_stmt: STOP
  106          | STOP INT_CONST
  107          | STOP STRING

  108 pointer_stmt: variable_ref PTR_ASSIGN variable_ref

  109 step_opt: %empty
  110         | COMMA expression

  111 print_stmt: PRINT ARITH_OP COMMA print_args

  112 print_args: expression
  113           | print_args COMMA expression

  114 allocate_stmt: ALLOCATE LPAREN argument_list RPAREN

  115 deallocate_stmt: DEALLOCATE LPAREN argument_list RPAREN

  116 expression: expression ARITH_OP expression
  117           | expression EXPONENT expression
  118           | expression REL_OP expression
  119           | expression LOGICAL_OP expression
  120           | factor
  121           | ARITH_OP expression
  122           | LOGICAL_OP expression

  123 factor: primary

  124 primary: INT_CONST
  125        | REAL_CONST
  126        | LOGICAL_CONST
  127        | STRING
  128        | complex_literal
  129        | LPAREN expression RPAREN
  130        | variable_ref primary_suffix_opt

  131 complex_literal: LPAREN expression COMMA expression RPAREN

  132 primary_suffix_opt: %empty
  133                   | LPAREN argument_list RPAREN

  134 variable_ref: identifier
  135             | variable_ref DERIVED_TYPE_COMPONENT identifier

  136 subprogram_list: %empty
  137                | subprogram_list subprogram

  138 subprogram: SUBROUTINE identifier LPAREN identifier_list_opt RPAREN program_body END SUBROUTINE
  139           | SUBROUTINE identifier LPAREN identifier_list_opt RPAREN program_body END SUBROUTINE identifier
  140           | FUNCTION identifier LPAREN identifier_list_opt RPAREN program_body END FUNCTION
  141           | FUNCTION identifier LPAREN identifier_list_opt RPAREN program_body END FUNCTION identifier
  142           | RECURSIVE FUNCTION identifier LPAREN identifier_list_opt RPAREN RESULT LPAREN identifier RPAREN program_body END FUNCTION
  143           | RECURSIVE FUNCTION identifier LPAREN identifier_list_opt RPAREN RESULT LPAREN identifier RPAREN program_body END FUNCTION identifier

  144 argument_list: %empty
  145              | expression
  146              | expression COMMA argument_list

  147 identifier_list_opt: %empty
  148                    | identifier_list

  149 identifier: IDENTIFIER
  150           | RESULT

  151 type_def: TYPE DECL_SEP identifier type_def_body END_TYPE identifier

  152 type_def_body: %empty
  153              | type_def_declarations

  154 type_def_declarations: type_def_declaration
  155                      | type_def_declarations type_def_declaration

  156 type_def_declaration: type_spec declaration_attributes DECL_SEP declarator_list

  157 pp_define_undef: PP_DEFINE identifier
  158                | PP_DEFINE identifier INT_CONST
  159                | PP_UNDEF identifier

  160 pp_if_block: PP_IFDEF identifier declarations pp_else_opt PP_ENDIF
  161            | PP_IFNDEF identifier declarations pp_else_opt PP_ENDIF
  162            | PP_IF identifier declarations pp_else_opt PP_ENDIF
  163            | PP_IF INT_CONST declarations pp_else_opt PP_ENDIF

  164 pp_else_opt: %empty
  165            | PP_ELSE declarations


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 8 9
    MODULE (259) 10 11
    END (260) 8 9 10 11 84 86 87 88 89 90 138 139 140 141 142 143
    CONTAINS (261) 14
    USE (262) 24
    NONE (263) 23
    IMPLICIT (264) 23
    INTEGER (265) 26
    REAL (266) 27
    LOGICAL (267) 28
    CHARACTER (268) 33
    TYPE (269) 30 151
    CLASS (270) 31
    END_TYPE (271) 151
    COMPLEX (272) 32
    IF (273) 83 84 85 86
    THEN (274) 83 84 85 86
    ELSE (275) 85 86
    DO (276) 87 88
    ENDIF (277) 83 85
    LEN (278)
    INTRINSIC (279) 103
    WHILE (280) 88
    SELECT (281) 89 90
    CASE (282) 89 99 100
    DEFAULT (283) 94 100
    RANK (284) 90 93 94
    STOP (285) 105 106 107
    PRINT (286) 111
    CALL (287) 101
    SUBROUTINE (288) 138 139
    FUNCTION (289) 140 141 142 143
    RETURN (290) 104
    RECURSIVE (291) 142 143
    RESULT (292) 142 143 150
    ALLOCATE (293) 114
    DEALLOCATE (294) 115
    ALLOCATED (295)
    POINTER (296) 42
    TARGET (297) 43
    ALLOCATABLE (298) 41
    INTENT (299) 44 45 46
    IN (300) 44
    OUT (301) 45
    INOUT (302) 46
    OPEN (303)
    CLOSE (304)
    INQUIRE (305)
    WRITE (306)
    READ (307)
    ERROR (308)
    LPAREN (309) 30 35 44 45 46 56 83 84 85 86 88 89 90 93 99 101 114 115 129 131 133 138 139 140 141 142 143
    RPAREN (310) 30 35 44 45 46 56 83 84 85 86 88 89 90 93 99 101 114 115 129 131 133 138 139 140 141 142 143
    COMMA (311) 40 48 50 52 58 87 110 111 113 131 146
    COLON (312) 36 60 62 63 64
    ASSUMED_RANK_SPECIFIER (313) 59
    CONCAT (314)
    PTR_ASSIGN (315) 108
    PP_DEFINE (316) 157 158
    PP_UNDEF (317) 159
    PP_IFDEF (318) 160
    PP_IFNDEF (319) 161
    PP_IF (320) 162 163
    PP_ELIF (321)
    PP_ELSE (322) 165
    PP_ENDIF (323) 160 161 162 163
    LENGTH_SPECIFIER (324) 35
    IDENTIFIER (325) 8 9 10 11 87 149
    INT_CONST (326) 37 95 106 124 158 163
    REAL_CONST (327) 125
    STRING (328) 107 127
    LOGICAL_CONST (329) 126
    ARITH_OP (330) 96 111 116 121
    REL_OP (331) 118
    LOGICAL_OP (332) 119 122
    ASSIGN (333) 35 66 82 87
    EXPONENT (334) 117
    DECL_SEP (335) 22 151 156
    DERIVED_TYPE_COMPONENT (336) 135
    UNARY (337)
    LOWER_THAN_ELSE (338)


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    start <node> (85)
        on left: 1 2
        on right: 0
    compilation_units <node> (86)
        on left: 3 4
        on right: 1 4
    compilation_unit <node> (87)
        on left: 5 6
        on right: 3 4
    free_form <node> (88)
        on left: 7
        on right: 2
    program_unit <node> (89)
        on left: 8 9
        on right: 5
    module_unit <node> (90)
        on left: 10 11
        on right: 6
    program_body <node> (91)
        on left: 12
        on right: 8 9 138 139 140 141 142 143
    module_body <node> (92)
        on left: 13
        on right: 10 11
    contains_block <node> (93)
        on left: 14 15
        on right: 12 13
    declarations <node> (94)
        on left: 16 17
        on right: 7 12 13 17 160 161 162 163 165
    preamble <node> (95)
        on left: 18 19
        on right: 7 12 13 19
    pp_item <node> (96)
        on left: 20 21
        on right: 19
    declaration <node> (97)
        on left: 22 23 24 25
        on right: 17
    type_spec <node> (98)
        on left: 26 27 28 29 30 31 32
        on right: 22 156
    char_type_spec <node> (99)
        on left: 33
        on right: 29
    char_len_opt <node> (100)
        on left: 34 35
        on right: 33
    char_len_value <node> (101)
        on left: 36 37 38
        on right: 35
    attributes <node> (102)
        on left: 39 40
        on right: 40 48
    attribute <node> (103)
        on left: 41 42 43 44 45 46
        on right: 39 40
    declaration_attributes <node> (104)
        on left: 47 48
        on right: 22 156
    identifier_list <node> (105)
        on left: 49 50
        on right: 50 148
    declarator_list <node> (106)
        on left: 51 52
        on right: 22 52 156
    declarator <node> (107)
        on left: 53
        on right: 51 52
    array_spec_opt <node> (108)
        on left: 54 55
        on right: 53
    array_spec <node> (109)
        on left: 56
        on right: 55
    array_spec_list <node> (110)
        on left: 57 58
        on right: 56 58
    array_spec_item <node> (111)
        on left: 59 60 61 62 63 64
        on right: 57 58
    init_opt <node> (112)
        on left: 65 66
        on right: 53
    executables <node> (113)
        on left: 67 68
        on right: 7 12 13 68 83 84 85 86 87 88 93 94 99 100
    executable <node> (114)
        on left: 69 70 71 72 73 74 75 76 77 78 79 80 81
        on right: 68
    assignment_stmt <node> (115)
        on left: 82
        on right: 69
    if_stmt <node> (116)
        on left: 83 84 85 86
        on right: 70
    do_stmt <node> (117)
        on left: 87
        on right: 74
    dowhile_stmt <node> (118)
        on left: 88
        on right: 75
    select_stmt <node> (119)
        on left: 89
        on right: 77
    select_rank_stmt <node> (120)
        on left: 90
        on right: 76
    rank_blocks <node> (121)
        on left: 91 92
        on right: 90 92
    rank_block <node> (122)
        on left: 93 94
        on right: 91 92
    rank_selector <node> (123)
        on left: 95 96
        on right: 93
    case_blocks <node> (124)
        on left: 97 98
        on right: 89 98
    case_block <node> (125)
        on left: 99 100
        on right: 97 98
    call_stmt <node> (126)
        on left: 101
        on right: 78
    callable_name <node> (127)
        on left: 102 103
        on right: 101
    return_stmt <node> (128)
        on left: 104
        on right: 79
    stop_stmt <node> (129)
        on left: 105 106 107
        on right: 80
    pointer_stmt <node> (130)
        on left: 108
        on right: 81
    step_opt <node> (131)
        on left: 109 110
        on right: 87
    print_stmt <node> (132)
        on left: 111
        on right: 71
    print_args <node> (133)
        on left: 112 113
        on right: 111 113
    allocate_stmt <node> (134)
        on left: 114
        on right: 72
    deallocate_stmt <node> (135)
        on left: 115
        on right: 73
    expression <node> (136)
        on left: 116 117 118 119 120 121 122
        on right: 61 62 63 64 66 82 83 84 85 86 87 88 89 99 110 112 113 116 117 118 119 121 122 129 131 145 146
    factor <node> (137)
        on left: 123
        on right: 120
    primary <node> (138)
        on left: 124 125 126 127 128 129 130
        on right: 123
    complex_literal <node> (139)
        on left: 131
        on right: 128
    primary_suffix_opt <node> (140)
        on left: 132 133
        on right: 130
    variable_ref <node> (141)
        on left: 134 135
        on right: 82 108 130 135
    subprogram_list <node> (142)
        on left: 136 137
        on right: 14 137
    subprogram <node> (143)
        on left: 138 139 140 141 142 143
        on right: 137
    argument_list <node> (144)
        on left: 144 145 146
        on right: 101 114 115 133 146
    identifier_list_opt <node> (145)
        on left: 147 148
        on right: 138 139 140 141 142 143
    identifier <node> (146)
        on left: 149 150
        on right: 24 30 31 38 49 50 53 90 102 134 135 138 139 140 141 142 143 151 157 158 159 160 161 162
    type_def <node> (147)
        on left: 151
        on right: 25
    type_def_body <node> (148)
        on left: 152 153
        on right: 151
    type_def_declarations <node> (149)
        on left: 154 155
        on right: 153 155
    type_def_declaration <node> (150)
        on left: 156
        on right: 154 155
    pp_define_undef <node> (151)
        on left: 157 158 159
        on right: 20
    pp_if_block <node> (152)
        on left: 160 161 162 163
        on right: 21
    pp_else_opt <node> (153)
        on left: 164 165
        on right: 160 161 162 163


State 0

    0 $accept: • start $end

    PROGRAM  shift, and go to state 1
    MODULE   shift, and go to state 2

    $default  reduce using rule 18 (preamble)

    start              go to state 3
    compilation_units  go to state 4
    compilation_unit   go to state 5
    free_form          go to state 6
    program_unit       go to state 7
    module_unit        go to state 8
    preamble           go to state 9


State 1

    8 program_unit: PROGRAM • IDENTIFIER program_body END PROGRAM IDENTIFIER
    9             | PROGRAM • IDENTIFIER program_body END PROGRAM

    IDENTIFIER  shift, and go to state 10


State 2

   10 module_unit: MODULE • IDENTIFIER module_body END MODULE IDENTIFIER
   11            | MODULE • IDENTIFIER module_body END MODULE

    IDENTIFIER  shift, and go to state 11


State 3

    0 $accept: start • $end

    $end  shift, and go to state 12


State 4

    1 start: compilation_units •
    4 compilation_units: compilation_units • compilation_unit

    PROGRAM  shift, and go to state 1
    MODULE   shift, and go to state 2

    $default  reduce using rule 1 (start)

    compilation_unit  go to state 13
    program_unit      go to state 7
    module_unit       go to state 8


State 5

    3 compilation_units: compilation_unit •

    $default  reduce using rule 3 (compilation_units)


State 6

    2 start: free_form •

    $default  reduce using rule 2 (start)


State 7

    5 compilation_unit: program_unit •

    $default  reduce using rule 5 (compilation_unit)


State 8

    6 compilation_unit: module_unit •

    $default  reduce using rule 6 (compilation_unit)


State 9

    7 free_form: preamble • declarations executables
   19 preamble: preamble • pp_item

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22
    PP_DEFINE  shift, and go to state 23
    PP_UNDEF   shift, and go to state 24
    PP_IFDEF   shift, and go to state 25
    PP_IFNDEF  shift, and go to state 26
    PP_IF      shift, and go to state 27

    $default  reduce using rule 16 (declarations)

    declarations     go to state 28
    pp_item          go to state 29
    declaration      go to state 30
    type_spec        go to state 31
    char_type_spec   go to state 32
    type_def         go to state 33
    pp_define_undef  go to state 34
    pp_if_block      go to state 35


State 10

    8 program_unit: PROGRAM IDENTIFIER • program_body END PROGRAM IDENTIFIER
    9             | PROGRAM IDENTIFIER • program_body END PROGRAM

    $default  reduce using rule 18 (preamble)

    program_body  go to state 36
    preamble      go to state 37


State 11

   10 module_unit: MODULE IDENTIFIER • module_body END MODULE IDENTIFIER
   11            | MODULE IDENTIFIER • module_body END MODULE

    $default  reduce using rule 18 (preamble)

    module_body  go to state 38
    preamble     go to state 39


State 12

    0 $accept: start $end •

    $default  accept


State 13

    4 compilation_units: compilation_units compilation_unit •

    $default  reduce using rule 4 (compilation_units)


State 14

   24 declaration: USE • identifier

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 42


State 15

   23 declaration: IMPLICIT • NONE

    NONE  shift, and go to state 43


State 16

   26 type_spec: INTEGER •

    $default  reduce using rule 26 (type_spec)


State 17

   27 type_spec: REAL •

    $default  reduce using rule 27 (type_spec)


State 18

   28 type_spec: LOGICAL •

    $default  reduce using rule 28 (type_spec)


State 19

   33 char_type_spec: CHARACTER • char_len_opt

    LPAREN  shift, and go to state 44

    $default  reduce using rule 34 (char_len_opt)

    char_len_opt  go to state 45


State 20

   30 type_spec: TYPE • LPAREN identifier RPAREN
  151 type_def: TYPE • DECL_SEP identifier type_def_body END_TYPE identifier

    LPAREN    shift, and go to state 46
    DECL_SEP  shift, and go to state 47


State 21

   31 type_spec: CLASS • identifier

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 48


State 22

   32 type_spec: COMPLEX •

    $default  reduce using rule 32 (type_spec)


State 23

  157 pp_define_undef: PP_DEFINE • identifier
  158                | PP_DEFINE • identifier INT_CONST

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 49


State 24

  159 pp_define_undef: PP_UNDEF • identifier

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 50


State 25

  160 pp_if_block: PP_IFDEF • identifier declarations pp_else_opt PP_ENDIF

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 51


State 26

  161 pp_if_block: PP_IFNDEF • identifier declarations pp_else_opt PP_ENDIF

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 52


State 27

  162 pp_if_block: PP_IF • identifier declarations pp_else_opt PP_ENDIF
  163            | PP_IF • INT_CONST declarations pp_else_opt PP_ENDIF

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    INT_CONST   shift, and go to state 53

    identifier  go to state 54


State 28

    7 free_form: preamble declarations • executables

    $default  reduce using rule 67 (executables)

    executables  go to state 55


State 29

   19 preamble: preamble pp_item •

    $default  reduce using rule 19 (preamble)


State 30

   17 declarations: declaration • declarations

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22

    $default  reduce using rule 16 (declarations)

    declarations    go to state 56
    declaration     go to state 30
    type_spec       go to state 31
    char_type_spec  go to state 32
    type_def        go to state 33


State 31

   22 declaration: type_spec • declaration_attributes DECL_SEP declarator_list

    COMMA  shift, and go to state 57

    $default  reduce using rule 47 (declaration_attributes)

    declaration_attributes  go to state 58


State 32

   29 type_spec: char_type_spec •

    $default  reduce using rule 29 (type_spec)


State 33

   25 declaration: type_def •

    $default  reduce using rule 25 (declaration)


State 34

   20 pp_item: pp_define_undef •

    $default  reduce using rule 20 (pp_item)


State 35

   21 pp_item: pp_if_block •

    $default  reduce using rule 21 (pp_item)


State 36

    8 program_unit: PROGRAM IDENTIFIER program_body • END PROGRAM IDENTIFIER
    9             | PROGRAM IDENTIFIER program_body • END PROGRAM

    END  shift, and go to state 59


State 37

   12 program_body: preamble • declarations executables contains_block
   19 preamble: preamble • pp_item

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22
    PP_DEFINE  shift, and go to state 23
    PP_UNDEF   shift, and go to state 24
    PP_IFDEF   shift, and go to state 25
    PP_IFNDEF  shift, and go to state 26
    PP_IF      shift, and go to state 27

    $default  reduce using rule 16 (declarations)

    declarations     go to state 60
    pp_item          go to state 29
    declaration      go to state 30
    type_spec        go to state 31
    char_type_spec   go to state 32
    type_def         go to state 33
    pp_define_undef  go to state 34
    pp_if_block      go to state 35


State 38

   10 module_unit: MODULE IDENTIFIER module_body • END MODULE IDENTIFIER
   11            | MODULE IDENTIFIER module_body • END MODULE

    END  shift, and go to state 61


State 39

   13 module_body: preamble • declarations executables contains_block
   19 preamble: preamble • pp_item

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22
    PP_DEFINE  shift, and go to state 23
    PP_UNDEF   shift, and go to state 24
    PP_IFDEF   shift, and go to state 25
    PP_IFNDEF  shift, and go to state 26
    PP_IF      shift, and go to state 27

    $default  reduce using rule 16 (declarations)
